--- a/airbnb2.ipynb
+++ b/airbnb2.ipynb
@@ -12,77 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Raphael Castelar\\AppData\\Local\\Temp\\ipykernel_12012\\1535400972.py:11: DtypeWarning: Columns (62,87) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(r'base de dados\\{}'.format(arquivo.name))\n",
-      "C:\\Users\\Raphael Castelar\\AppData\\Local\\Temp\\ipykernel_12012\\1535400972.py:11: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(r'base de dados\\{}'.format(arquivo.name))\n",
-      "C:\\Users\\Raphael Castelar\\AppData\\Local\\Temp\\ipykernel_12012\\1535400972.py:11: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(r'base de dados\\{}'.format(arquivo.name))\n",
-      "C:\\Users\\Raphael Castelar\\AppData\\Local\\Temp\\ipykernel_12012\\1535400972.py:11: DtypeWarning: Columns (87) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(r'base de dados\\{}'.format(arquivo.name))\n",
-      "C:\\Users\\Raphael Castelar\\AppData\\Local\\Temp\\ipykernel_12012\\1535400972.py:11: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(r'base de dados\\{}'.format(arquivo.name))\n",
-      "C:\\Users\\Raphael Castelar\\AppData\\Local\\Temp\\ipykernel_12012\\1535400972.py:11: DtypeWarning: Columns (87) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(r'base de dados\\{}'.format(arquivo.name))\n",
-      "C:\\Users\\Raphael Castelar\\AppData\\Local\\Temp\\ipykernel_12012\\1535400972.py:11: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(r'base de dados\\{}'.format(arquivo.name))\n",
-      "C:\\Users\\Raphael Castelar\\AppData\\Local\\Temp\\ipykernel_12012\\1535400972.py:11: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(r'base de dados\\{}'.format(arquivo.name))\n",
-      "C:\\Users\\Raphael Castelar\\AppData\\Local\\Temp\\ipykernel_12012\\1535400972.py:11: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(r'base de dados\\{}'.format(arquivo.name))\n",
-      "C:\\Users\\Raphael Castelar\\AppData\\Local\\Temp\\ipykernel_12012\\1535400972.py:11: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(r'base de dados\\{}'.format(arquivo.name))\n",
-      "C:\\Users\\Raphael Castelar\\AppData\\Local\\Temp\\ipykernel_12012\\1535400972.py:11: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(r'base de dados\\{}'.format(arquivo.name))\n",
-      "C:\\Users\\Raphael Castelar\\AppData\\Local\\Temp\\ipykernel_12012\\1535400972.py:11: DtypeWarning: Columns (87) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(r'base de dados\\{}'.format(arquivo.name))\n",
-      "C:\\Users\\Raphael Castelar\\AppData\\Local\\Temp\\ipykernel_12012\\1535400972.py:11: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(r'base de dados\\{}'.format(arquivo.name))\n",
-      "C:\\Users\\Raphael Castelar\\AppData\\Local\\Temp\\ipykernel_12012\\1535400972.py:11: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(r'base de dados\\{}'.format(arquivo.name))\n",
-      "C:\\Users\\Raphael Castelar\\AppData\\Local\\Temp\\ipykernel_12012\\1535400972.py:11: DtypeWarning: Columns (87) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(r'base de dados\\{}'.format(arquivo.name))\n",
-      "C:\\Users\\Raphael Castelar\\AppData\\Local\\Temp\\ipykernel_12012\\1535400972.py:11: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(r'base de dados\\{}'.format(arquivo.name))\n",
-      "C:\\Users\\Raphael Castelar\\AppData\\Local\\Temp\\ipykernel_12012\\1535400972.py:11: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(r'base de dados\\{}'.format(arquivo.name))\n",
-      "C:\\Users\\Raphael Castelar\\AppData\\Local\\Temp\\ipykernel_12012\\1535400972.py:11: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(r'base de dados\\{}'.format(arquivo.name))\n",
-      "C:\\Users\\Raphael Castelar\\AppData\\Local\\Temp\\ipykernel_12012\\1535400972.py:11: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(r'base de dados\\{}'.format(arquivo.name))\n",
-      "C:\\Users\\Raphael Castelar\\AppData\\Local\\Temp\\ipykernel_12012\\1535400972.py:11: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(r'base de dados\\{}'.format(arquivo.name))\n",
-      "C:\\Users\\Raphael Castelar\\AppData\\Local\\Temp\\ipykernel_12012\\1535400972.py:11: DtypeWarning: Columns (87) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(r'base de dados\\{}'.format(arquivo.name))\n",
-      "C:\\Users\\Raphael Castelar\\AppData\\Local\\Temp\\ipykernel_12012\\1535400972.py:11: DtypeWarning: Columns (87) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(r'base de dados\\{}'.format(arquivo.name))\n",
-      "C:\\Users\\Raphael Castelar\\AppData\\Local\\Temp\\ipykernel_12012\\1535400972.py:11: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(r'base de dados\\{}'.format(arquivo.name))\n",
-      "C:\\Users\\Raphael Castelar\\AppData\\Local\\Temp\\ipykernel_12012\\1535400972.py:11: DtypeWarning: Columns (87) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(r'base de dados\\{}'.format(arquivo.name))\n",
-      "C:\\Users\\Raphael Castelar\\AppData\\Local\\Temp\\ipykernel_12012\\1535400972.py:11: DtypeWarning: Columns (61,62,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(r'base de dados\\{}'.format(arquivo.name))\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: 'data '",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 10\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"mes = meses[nome_mes]\"\"\"\u001b[39;00m\n\u001b[0;32m      9\u001b[0m ano \u001b[38;5;241m=\u001b[39m arquivo\u001b[38;5;241m.\u001b[39mname[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m8\u001b[39m:]\n\u001b[1;32m---> 10\u001b[0m ano \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mano\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreplace\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m.csv\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m \u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     11\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbase de dados\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(arquivo\u001b[38;5;241m.\u001b[39mname))\n\u001b[0;32m     12\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mano\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m ano\n",
-      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: 'data '"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "caminho_bases = pathlib.Path('base de dados')\n",
     "base_airbnb = pd.DataFrame()\n",
@@ -94,21 +26,79 @@
     "    mes = meses[nome_mes]\n",
     "    ano = arquivo.name[-8:]\n",
     "    ano = int(ano.replace('.csv', ''))\n",
-    "    df = pd.read_csv(r'base de dados\\{}'.format(arquivo.name))\n",
+    "    \n",
+    "    df = pd.read_csv(caminho_bases / arquivo.name)\n",
+    "    \n",
     "    df['ano'] = ano\n",
     "    df['mes'] = mes\n",
     "\n",
     "    base_airbnb = base_airbnb._append(df)\n",
-    "\n"
+    "\n",
+    "\n",
+    "display(base_airbnb)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Temos muitas colunas, então vou analisar para usar apenas as colunas necessárias para a previsão dos preços.\n",
+    "\n",
+    "- Para isso, vou criar um arquivo em excel com os 1000 primeiros registros e fazer uma analise qualitativa.\n",
+    "\n",
+    "- Tipos de informações que eu vou excluir:\n",
+    "    -IDS, Links, Informações não relevantes\n",
+    "    -Colunas repetidadas ou extremamente parecidas com outras (que dão a mesma informação para o modelo)\n",
+    "    -Colunas preenchidas com texto livre (não irá ser rodado nenhuma análise de texto)\n",
+    "    -"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['id', 'listing_url', 'scrape_id', 'last_scraped', 'name', 'summary', 'space', 'description', 'experiences_offered', 'neighborhood_overview', 'notes', 'transit', 'access', 'interaction', 'house_rules', 'thumbnail_url', 'medium_url', 'picture_url', 'xl_picture_url', 'host_id', 'host_url', 'host_name', 'host_since', 'host_location', 'host_about', 'host_response_time', 'host_response_rate', 'host_acceptance_rate', 'host_is_superhost', 'host_thumbnail_url', 'host_picture_url', 'host_neighbourhood', 'host_listings_count', 'host_total_listings_count', 'host_verifications', 'host_has_profile_pic', 'host_identity_verified', 'street', 'neighbourhood', 'neighbourhood_cleansed', 'neighbourhood_group_cleansed', 'city', 'state', 'zipcode', 'market', 'smart_location', 'country_code', 'country', 'latitude', 'longitude', 'is_location_exact', 'property_type', 'room_type', 'accommodates', 'bathrooms', 'bedrooms', 'beds', 'bed_type', 'amenities', 'square_feet', 'price', 'weekly_price', 'monthly_price', 'security_deposit', 'cleaning_fee', 'guests_included', 'extra_people', 'minimum_nights', 'maximum_nights', 'calendar_updated', 'has_availability', 'availability_30', 'availability_60', 'availability_90', 'availability_365', 'calendar_last_scraped', 'number_of_reviews', 'first_review', 'last_review', 'review_scores_rating', 'review_scores_accuracy', 'review_scores_cleanliness', 'review_scores_checkin', 'review_scores_communication', 'review_scores_location', 'review_scores_value', 'requires_license', 'license', 'jurisdiction_names', 'instant_bookable', 'is_business_travel_ready', 'cancellation_policy', 'require_guest_profile_picture', 'require_guest_phone_verification', 'calculated_host_listings_count', 'reviews_per_month', 'ano', 'mes', 'minimum_minimum_nights', 'maximum_minimum_nights', 'minimum_maximum_nights', 'maximum_maximum_nights', 'minimum_nights_avg_ntm', 'maximum_nights_avg_ntm', 'number_of_reviews_ltm', 'calculated_host_listings_count_entire_homes', 'calculated_host_listings_count_private_rooms', 'calculated_host_listings_count_shared_rooms']\n"
+     ]
+    }
+   ],
    "source": [
-    "display(base_airbnb)"
+    "print(list(base_airbnb.columns))\n",
+    "base_airbnb.head(1000).to_csv('primeiros registros.csv', sep= ';')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<bound method DataFrame.value_counts of       experiences_offered\n",
+      "0                    none\n",
+      "1                    none\n",
+      "2                    none\n",
+      "3                    none\n",
+      "4                    none\n",
+      "...                   ...\n",
+      "34324                none\n",
+      "34325                none\n",
+      "34326                none\n",
+      "34327                none\n",
+      "34328                none\n",
+      "\n",
+      "[902210 rows x 1 columns]>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(base_airbnb[['experiences_offered']].value_counts)"
    ]
   },
   {
