--- a/airbnb2.ipynb
+++ b/airbnb2.ipynb
@@ -818,7 +818,7 @@
    "source": [
     "base_airbnb, linhas_removidas = excluirOutliers(base_airbnb, 'price')\n",
     "print(linhas_removidas)\n",
-    "histograma(base_airbnb['price'])"
+    "#histograma(base_airbnb['price'])"
    ]
   },
   {
@@ -845,7 +845,7 @@
     "\n",
     "base_airbnb, linhas_removidas = excluirOutliers(base_airbnb, 'extra_people')\n",
     "print(linhas_removidas)\n",
-    "histograma(base_airbnb['extra_people'])"
+    "#histograma(base_airbnb['extra_people'])"
    ]
   },
   {
@@ -882,7 +882,7 @@
     "\n",
     "base_airbnb, linhas_removidas = excluirOutliers(base_airbnb, 'host_listings_count')\n",
     "print(linhas_removidas)\n",
-    "grafico_barra(base_airbnb['host_listings_count'])\n"
+    "#grafico_barra(base_airbnb['host_listings_count'])\n"
    ]
   },
   {
@@ -919,7 +919,7 @@
     "\n",
     "base_airbnb, linhas_removidas = excluirOutliers(base_airbnb, 'accommodates')\n",
     "print(linhas_removidas)\n",
-    "grafico_barra(base_airbnb['accommodates'])"
+    "#grafico_barra(base_airbnb['accommodates'])"
    ]
   },
   {
@@ -945,7 +945,7 @@
    "source": [
     "base_airbnb, linhas_removidas = excluirOutliers(base_airbnb, 'bathrooms')\n",
     "print(linhas_removidas)\n",
-    "grafico_barra(base_airbnb['bathrooms'])"
+    "#grafico_barra(base_airbnb['bathrooms'])"
    ]
   },
   {
@@ -1006,7 +1006,7 @@
    "source": [
     "base_airbnb, linhas_removidas = excluirOutliers(base_airbnb, 'beds')\n",
     "print(linhas_removidas)\n",
-    "grafico_barra(base_airbnb['beds'])"
+    "#grafico_barra(base_airbnb['beds'])"
    ]
   },
   {
@@ -1044,6 +1044,33 @@
     "#grafico_barra(base_airbnb['guests_included'])\n",
     "base_airbnb = base_airbnb.drop('guests_included', axis=1)\n",
     "base_airbnb.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### minimum_nights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40383\n"
+     ]
+    }
+   ],
+   "source": [
+    "#diagrama_caixa(base_airbnb['minimum_nights'])\n",
+    "#grafico_barra(base_airbnb['minimum_nights'])\n",
+    "base_airbnb, linhas_removidas = excluirOutliers(base_airbnb, 'minimum_nights')\n",
+    "print(linhas_removidas)"
    ]
   },
   {
