--- a/airbnb2.ipynb
+++ b/airbnb2.ipynb
@@ -1089,6 +1089,36 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Irei retirar o number_of_reviews, acho que não irá infuenciar na análise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(581983, 20)"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base_airbnb = base_airbnb.drop('number_of_reviews', axis=1)\n",
+    "base_airbnb.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
