--- a/airbnb2.ipynb
+++ b/airbnb2.ipynb
@@ -1336,7 +1336,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### amenities"
+    "### amenities\n",
+    "\n",
+    "Como temos uma diversidade muito grande, as vezes, as mesmas amenities poderiam ser escritas de forma diferente. Portanto, irei avaliar a quantidade de amenities em cada airbnb para que eu possa usar essa coluna como parametro no modelo."
    ]
   },
   {
@@ -1348,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1357,10 +1359,25 @@
      "text": [
       "{TV,\"Cable TV\",Internet,Wifi,\"Air conditioning\",Kitchen,\"Paid parking off premises\",\"Smoking allowed\",Doorman,Elevator,\"Hot tub\",\"Family/kid friendly\",\"Suitable for events\",Essentials,\"24-hour check-in\",Hangers,\"Hair dryer\",Iron,\"Laptop friendly workspace\",\"Self check-in\",\"Building staff\",\"Private entrance\",\"Hot water\",\"Bed linens\",Microwave,\"Coffee maker\",Refrigerator,\"Dishes and silverware\",\"Cooking basics\",Oven,Stove,\"Patio or balcony\",\"Luggage dropoff allowed\"}\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(581983, 20)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(base_airbnb['amenities'].iloc[0])"
+    "#print(base_airbnb['amenities'].iloc[0])\n",
+    "\n",
+    "\n",
+    "base_airbnb['n_amenities'] = base_airbnb['amenities'].str.split(',').apply(len)\n",
+    "base_airbnb = base_airbnb.drop('amenities', axis=1)\n",
+    "base_airbnb.shape"
    ]
   },
   {
