--- a/deploy_projeto_airbnb.ipynb
+++ b/deploy_projeto_airbnb.ipynb
@@ -2,9 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-08-06 13:32:50.978 WARNING streamlit.runtime.state.session_state_proxy: Session state does not function when running a script without `streamlit run`\n",
+      "2024-08-06 13:32:51.038 \n",
+      "  \u001b[33m\u001b[1mWarning:\u001b[0m to view this Streamlit app on a browser, run it with the following\n",
+      "  command:\n",
+      "\n",
+      "    streamlit run /Users/selmajosecastelarferreira/Desktop/projeto-analise-airbnb/.venv/lib/python3.12/site-packages/ipykernel_launcher.py [ARGUMENTS]\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import streamlit as st\n",
