--- a/deploy_projeto_airbnb.ipynb
+++ b/deploy_projeto_airbnb.ipynb
@@ -2,22 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-08-06 13:32:50.978 WARNING streamlit.runtime.state.session_state_proxy: Session state does not function when running a script without `streamlit run`\n",
-      "2024-08-06 13:32:51.038 \n",
-      "  \u001b[33m\u001b[1mWarning:\u001b[0m to view this Streamlit app on a browser, run it with the following\n",
-      "  command:\n",
-      "\n",
-      "    streamlit run /Users/selmajosecastelarferreira/Desktop/projeto-analise-airbnb/.venv/lib/python3.12/site-packages/ipykernel_launcher.py [ARGUMENTS]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import streamlit as st\n",
@@ -31,24 +18,32 @@
     "            'room_type': ['Entire home/apt', 'Hotel room', 'Private room', 'Shared room'],\n",
     "            'cancelation_policy': ['flexible', 'moderate', 'strict', 'strict_14_with_grace_period']}\n",
     "\n",
+    "dicionario = {}\n",
+    "for item in x_listas:\n",
+    "    dicionario[]\n",
+    "\n",
     "for item in x_numericos:\n",
-    "    valor = st.number_input(f'{item}')\n",
+    "\n",
+    "    if item == 'latitude' or item == 'longitude':\n",
+    "        valor = st.number_input(f'{item}', step=0.00001, value=0.0, format=\"%.5f\")\n",
+    "    elif item == 'extra_people':\n",
+    "        valor = st.number_input(f'{item}', step=0.01, value=0.0)\n",
+    "    else:\n",
+    "        valor = st.number_input(f'{item}', step=1, value=0)\n",
+    "    x_numericos[item] = valor\n",
     "\n",
     "for item in x_tf:\n",
     "    valor = st.selectbox(f'{item}', ('Sim', 'Não'))\n",
+    "    if valor == 'Sim':\n",
+    "        x_tf[item] = 1\n",
+    "    else:\n",
+    "        x_tf[item] = 0\n",
     "\n",
     "for item in x_listas:\n",
     "    valor = st.selectbox(f'{item}', x_listas[item])\n",
     "\n",
     "botao = st.button('Prever Valor do Imovel')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
