--- a/deploy_projeto_airbnb.ipynb
+++ b/deploy_projeto_airbnb.ipynb
@@ -10,11 +10,11 @@
     "import streamlit as st\n",
     "import joblib\n",
     "\n",
-    "x_numericos = {'host_listings_count':0, 'latitude': 0, 'longitude':0, 'accommodates':0, 'bathrooms':0, 'bedrooms':0, 'beds':0, 'extra_people':0, 'minimum_nights': 0, 'ano':0, 'mes':0, 'n_amenities':0}\n",
+    "x_numericos = {'latitude': 0, 'longitude':0, 'accommodates':0, 'bathrooms':0, 'bedrooms':0, 'beds':0, 'extra_people':0, 'minimum_nights': 0, 'ano':0, 'mes':0, 'n_amenities':0,'host_listings_count':0}\n",
     "\n",
-    "x_tf = {'host_is_superhost': 0, 'intant_bookable': 0}\n",
+    "x_tf = {'host_is_superhost': 0, 'instant_bookable': 0}\n",
     "\n",
-    "x_listas = {'property_type': ['Apartament', 'Bed and breakfast', 'Condominium', 'Suite', 'Guesthouse', 'Hostel', 'House', 'Loft', 'Outros', 'Serviced Apartament'],\n",
+    "x_listas = {'property_type': ['Apartment', 'Bed and breakfast', 'Condominium', 'Guest suite', 'Guesthouse', 'Hostel', 'House', 'Loft', 'Outros', 'Serviced apartment'],\n",
     "            'room_type': ['Entire home/apt', 'Hotel room', 'Private room', 'Shared room'],\n",
     "            'cancellation_policy': ['flexible', 'moderate', 'strict', 'strict_14_with_grace_period']}\n",
     "\n",
@@ -56,7 +56,7 @@
     "\n",
     "    valores_x = valores_x[colunas]\n",
     "\n",
-    "    modelo = joblib.load('modelo,joblib')\n",
+    "    modelo = joblib.load('modelo.joblib')\n",
     "    preco = modelo.predict(valores_x)\n",
     "    st.write(preco[0])"
    ]
@@ -74,9 +74,7 @@
      ]
     }
    ],
-   "source": [
-    "print(colunas)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
